--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,41 @@
-body
+body {
   font-size: 14px;
-}
+} /* sets the font size of the text within the body tag to 14px (unless changed in future selector)*/
 
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+} /* sets the dimensions/properties of everything within the nav tag */
 
 section {
   margin: 0 auto;
   width: 60%;
-}
+} /* sets the margin and width of all elements withing the section tag */
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
-}
+} /* sets the font and size of all text withing the h1 tag */
 
 .example, h3 {
   padding-top: 30px;
-  text-align center
-}
+  text-align: center;
+} /* sets the padding and text alignment for anything with the example class or h3 tag */
 
 h3 {
   font-size: 1.3em;
-}
+} /* sets the font size of any text within the h3 tag */
 
 .element {
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0;
   width: 100%;
+} /* sets the background color, height, margin, and width of anything with the element class */
+
+#new-background {
+  background-color: blue;
+} /* over-rides any previous background color for any element with this id */
